# papertty

./: README.md  pyproject.toml
papertty/: papertty.py
papertty/drivers/: driver.py  drivers_partial.py  epdconfig.py
