[tool.poetry]
name = "papertty"
version = "0.1.8"
description = "Python module to render a TTY or VNC on e-ink"
authors = ["Jouko Strömmer <jouko.strommer@iki.fi>", "Tom Fullylove <t.fullylove@hotmail.co.uk>"]
readme = "README.md"
repository = "https://github.com/tomfullylove/papertty"
homepage = "https://github.com/tomfullylove/papertty"

[tool.poetry.dependencies]
click = "^7.1.2"
Pillow = "7.1.2"
python = "^3.11"
"RPi.GPIO" = "^0.7.0"
spidev = "^3.4"
twisted = "23.8.0"

[tool.poetry.scripts]
papertty = "papertty.papertty:terminal"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
